# adaptive-reasoning-agent

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BENCHMARK.md  BENCHMARK_CORE.md  BENCHMARK_LOAD.md  BENCHMARK_OTEL.md  BENCHMARK_REDIS.md  HOW_IT_WORKS.md  OBSERVABILITY_EXPLAINED.md  PROJECT_SUMMARY.md  PR_MINI_EVAL_REPORT.md  QUICKSTART.md  README.md  RETRIEVER_EXPLAINED.md  docker-compose.yml  main.py  pyproject.toml  pytest.ini  requirements.txt  setup_sample_data.py  test_agent.py  verify_cache.py
.github/workflows/: ci.yml  mini_eval.yml
benchmarks/: api_benchmark.py  core_benchmark.py  otel_benchmark.py
benchmarks/results/: after_bench_raw.txt  core_benchmark_1771082122.json  post_async_benchmark.json  post_cache_benchmark.json  post_ollama_cache_benchmark.json  post_otel_benchmark.json  pre_async_benchmark.json  pre_ollama_cache_benchmark.json  pre_otel_benchmark.json  pre_redis_cache_benchmark.json
config/: prometheus.yml
data/documents/: .gitkeep  deep_learning.txt  machine_learning.txt  nlp_basics.txt  rag_systems.txt  vector_databases.txt
data/examples/: example_queries.txt
load_tests/: README.md  locustfile.py
src/: __init__.py
src/agents/: __init__.py  nodes.py  rag_graph.py  state.py
src/api/: __init__.py  main.py
src/core/: __init__.py  embeddings.py  logging_config.py  retriever.py  semantic_cache.py  telemetry.py  vector_store.py
src/corrective/: __init__.py  answer_verifier.py  hallucination_checker.py  query_rewriter.py  relevance_grader.py
src/scripts/: verify_ollama.py
tests/: README.md  __init__.py  conftest.py  test_semantic_cache.py
(+19 files in other folders)
